// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[COMPONENT] ExpensesList Tests for changes in the rendered component with expenses 1`] = `
<div
  className="ExpensesList"
>
  <div
    className="ExpensesList__header"
  >
    <h2>
      Expenses
    </h2>
  </div>
  <Connect(Filters) />
  <div
    className="ExpensesList__content"
  >
    <Connect(ExpensesListItem)
      amount={150000}
      createdAt={0}
      description="Rent"
      id="1"
      key="1"
      note="Monthly payment"
    />
    <Connect(ExpensesListItem)
      amount={1000}
      createdAt={-345600000}
      description="Car washing"
      id="2"
      key="2"
      note="Non planned expense"
    />
    <Connect(ExpensesListItem)
      amount={22000}
      createdAt={345600000}
      description="Groceries"
      id="3"
      key="3"
      note="Weekly expense"
    />
  </div>
</div>
`;

exports[`[COMPONENT] ExpensesList Tests for changes in the rendered component with no expense 1`] = `
<div
  className="ExpensesList"
>
  <div
    className="ExpensesList__header"
  >
    <h2>
      Expenses
    </h2>
  </div>
  <Connect(Filters) />
  <div
    className="ExpensesList__content"
  />
</div>
`;
